--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 bevy = "0.17.2"
 bevy_mesh = "0.17.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
