--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = "0.17.2"
+bevy = { version = "0.17.2", features = ["jpeg"] }
 bevy_mesh = "0.17.2"
 rand = "0.9.2"
 serde = { version = "1.0", features = ["derive"] }
